--- a/Books/Areas/Customer/Views/Cart/Index.cshtml
+++ b/Books/Areas/Customer/Views/Cart/Index.cshtml
@@ -1,63 +1,60 @@
-﻿@model Books.Domain.ViewModels.ShoppingCartViewModel 
-
+﻿@model Books.Domain.ViewModels.ShoppingCartViewModel
 
 @{
     ViewData["Title"] = "Cart";
 #pragma warning disable
 }
 
-
 <form method="post">
     <br />
     <div class="container">
-        <div class="card">
-            <div class="card-header bg-secondary text-dark fw-bold  fs-1 ml-0">
+        <div class="card shadow-sm">
+            <div class="card-header bg-dark text-white fw-bold fs-1">
                 <div class="row">
-                    <div class="col-6  pt-2">
+                    <div class="col-6 pt-2">
                         <i class="bi bi-receipt text-success"></i> &nbsp;
                         Shopping Cart
                     </div>
                     <div class="col-6 text-end">
-                        <a asp-area="Customer" asp-controller="Home" asp-action="Index" class="btn btn-outline-success btn-sm">Continue Shopping</a>
+                        <a asp-area="Customer" asp-controller="Home" asp-action="Index" class="btn btn-outline-light btn-sm">Continue Shopping</a>
                     </div>
                 </div>
             </div>
 
-            <div class="card-body">
+            <div class="card-body bg-light">
                 @foreach (var item in Model.ShoppingCarts)
                 {
-                    <div class="row">
-                        <div class="d-none d-lg-block col-lg-1 text-center py-2">
-                            <img src="@item.Product.ImageUrl" class="rounded w-100" />
+                    <div class="row align-items-center my-3">
+                        <div class="col-lg-1 text-center py-2 d-none d-lg-block">
+                            <img src="@item.Product.ImageUrl" class="rounded w-100 shadow-sm" />
                         </div>
                         <div class="col-12 col-lg-6 pt-md-3">
                             <h5><strong>@item.Product.Title</strong></h5>
                             <p class="fst-italic"><small>ISBN: @Html.Raw(item.Product.ISBN)</small></p>
-                            <p class="fst-italic text-warning"><span class="text-muted">Items: &nbsp</span><strong>@item.Count</strong></p>
+                            <p class="fst-italic text-warning"><span class="text-muted">Items: &nbsp;</span><strong>@item.Count</strong></p>
                         </div>
-                        <div class="col-12  col-lg-5 text-center row pt-4">
+                        <div class="col-12 col-lg-5 text-center row pt-4">
                             <div class="col-4 text-md-right pt-4">
                                 <h6>
                                     <strong>
-                                        
-                                        <span class="text-muted"><strike>@item.PriceHolder.ToString("c")</strike> &nbsp</span>
-                                        <strong>@item.PriceHolderRabat().ToString("c")</strong>
+                                        <span class="text-muted"><strike>@item.PriceHolder.ToString("c")</strike> &nbsp;</span>
+                                        <strong class="text-success">@item.PriceHolderRabat().ToString("c")</strong>
                                     </strong>
                                 </h6>
                             </div>
                             <div class="col-8 col-sm-6 pt-1">
-                                <div class="w-75 btn-group" role="group">
-                                    <a asp-action="AddItem" asp-route-cartId="@item.Id" class="btn">
-                                        <i class="bi bi-bag-plus" style="font-size: 2rem; color: cornflowerblue;"></i>
+                                <div class="btn-group w-100" role="group">
+                                    <a asp-action="AddItem" asp-route-cartId="@item.Id" class="btn btn-outline-success">
+                                        <i class="bi bi-bag-plus" style="font-size: 2rem;"></i>
                                     </a>&nbsp;
-                                    <a asp-action="RemoveItem" asp-route-cartId="@item.Id" class="btn">
-                                        <i class="bi bi-bag-dash text-warning" style="font-size: 2rem;"></i>
+                                    <a asp-action="RemoveItem" asp-route-cartId="@item.Id" class="btn btn-outline-warning">
+                                        <i class="bi bi-bag-dash" style="font-size: 2rem;"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="col-2 col-sm-4 col-lg-2 text-end pt-1">
-                                <a asp-action="RemoveFromBasket" asp-route-cartId="@item.Id" class="btn">
-                                    <i class="bi bi-trash-fill text-danger" style="font-size: 2rem;"></i>
+                                <a asp-action="RemoveFromBasket" asp-route-cartId="@item.Id" class="btn btn-outline-danger">
+                                    <i class="bi bi-trash-fill" style="font-size: 2rem;"></i>
                                 </a>
                             </div>
                         </div>
@@ -65,21 +62,20 @@
                     <hr />
                 }
                 <div class="row">
-                    <div class="col-12 col-md-6 offset-md-6 col-lg-4 offset-lg-8 pr-4">
+                    <div class="col-12 col-md-6 offset-md-6 col-lg-4 offset-lg-8">
                         <ul class="list-group">
                             <li class="list-group-item d-flex justify-content-between bg-light">
                                 <span class="text-dark"> Total</span>
-                                <strong class="text-dark">@Model.OrderHeader.OrderTotal.ToString("c")</strong> 
+                                <strong class="text-dark">@Model.OrderHeader.OrderTotal.ToString("c")</strong>
                             </li>
                         </ul>
                     </div>
                 </div>
-
             </div>
 
             <div class="card-footer">
-                <div class="card-footer row">
-                    <div class="col-sm-12 col-lg-4 col-md-6 offset-lg-8 offset-md-6 ">
+                <div class="row">
+                    <div class="col-sm-12 col-lg-4 col-md-6 offset-lg-8 offset-md-6">
                         <a asp-action="Summary" class="btn btn-success form-control">Summary</a>
                     </div>
                 </div>
