--- a/Books/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/Books/Areas/Customer/Views/Cart/Summary.cshtml
@@ -3,7 +3,6 @@
 @using Books.Domain.Utilities;
 @inject IOptions<Books.Domain.Utilities.StripeSettings> Stripe
 
-
 @{
     ViewData["Title"] = "Order Summary";
 #pragma warning disable
@@ -11,19 +10,19 @@
 
 <form method="post">
     <br />
-    <div class="container">
-        <div class="card">
-            <div class="card-header bg-secondary text-dark fw-bold fs-1 ml-0">
+    <div class="container bg-white">
+        <div class="card shadow-sm">
+            <div class="card-header bg-dark text-white fw-bold fs-1">
                 <div class="row">
                     <div class="col-6">
                         <i class="fa fa-shopping-cart"></i><i class="bi bi-tags-fill text-success"></i> &nbsp;Order Summary
                     </div>
                     <div class="col-6 text-end">
-                        <a asp-action="Index" class="btn btn-outline-info btn-sm">Back to Cart</a>
+                        <a asp-action="Index" class="btn btn-outline-light btn-sm">Back to Cart</a>
                     </div>
                 </div>
             </div>
-            <div class="card-body">
+            <div class="card-body bg-light">
                 <div class="container rounded p-2">
                     <div class="row">
                         <div class="col-12 col-lg-6 pb-4">
@@ -47,7 +46,7 @@
                             </div>
                             <div class="row my-1">
                                 <div class="col-3">
-                                    <label>@Html.DisplayNameFor(model=>model.OrderHeader.PhoneNumber)</label>
+                                    <label>@Html.DisplayNameFor(model => model.OrderHeader.PhoneNumber)</label>
                                 </div>
                                 <div class="col-9">
                                     <input asp-for="OrderHeader.PhoneNumber" class="form-control" />
@@ -56,7 +55,7 @@
                             </div>
                             <div class="row my-1">
                                 <div class="col-3">
-                                    <label>@Html.DisplayNameFor(model=>model.OrderHeader.StreetAddress)</label>
+                                    <label>@Html.DisplayNameFor(model => model.OrderHeader.StreetAddress)</label>
                                 </div>
                                 <div class="col-9">
                                     <input asp-for="OrderHeader.StreetAddress" class="form-control" />
@@ -65,7 +64,7 @@
                             </div>
                             <div class="row my-1">
                                 <div class="col-3">
-                                    <label>@Html.DisplayNameFor(model=>model.OrderHeader.City)</label>
+                                    <label>@Html.DisplayNameFor(model => model.OrderHeader.City)</label>
                                 </div>
                                 <div class="col-9">
                                     <input asp-for="OrderHeader.City" class="form-control" />
@@ -74,7 +73,7 @@
                             </div>
                             <div class="row my-1">
                                 <div class="col-3">
-                                    <label>@Html.DisplayNameFor(model=>model.OrderHeader.State)</label>
+                                    <label>@Html.DisplayNameFor(model => model.OrderHeader.State)</label>
                                 </div>
                                 <div class="col-9">
                                     <input asp-for="OrderHeader.State" class="form-control" />
@@ -83,7 +82,7 @@
                             </div>
                             <div class="row my-1">
                                 <div class="col-3">
-                                    <label>@Html.DisplayNameFor(model=>model.OrderHeader.PostalCode)</label>
+                                    <label>@Html.DisplayNameFor(model => model.OrderHeader.PostalCode)</label>
                                 </div>
                                 <div class="col-9">
                                     <input asp-for="OrderHeader.PostalCode" class="form-control" />
@@ -95,20 +94,20 @@
                             <h4 class="d-flex justify-content-between align-items-center mb-3">
                                 <span class="text-dark fw-bold">Order Summary</span>
                             </h4>
-                            <ul class="list-group mb-3">
+                            <ul class="list-group mb-3 shadow-sm">
                                 @foreach (var item in Model.ShoppingCarts)
                                 {
                                     <li class="list-group-item d-flex justify-content-between">
                                         <div>
-                                            <h6 class="my-0">@item.Product.Title</h6> 
-                                            <small class="text-muted">Price:<strike>@item.PriceHolder.ToString("c")</strike></small><br>
+                                            <h6 class="my-0">@item.Product.Title</h6>
+                                            <small class="text-muted">Price: <strike>@item.PriceHolder.ToString("c")</strike></small><br>
                                             <small class="text-muted">Quantity: @item.Count</small>
                                         </div>
-                                        <span class="text-muted">@(item.SetPriceHolderRabat(@item.PriceHolder*Rabat.DISCOUNT).ToString("c")) </span>
+                                        <span class="text-success">@(item.SetPriceHolderRabat(@item.PriceHolder * Rabat.DISCOUNT).ToString("c")) </span>
                                     </li>
                                 }
                                 <li class="list-group-item d-flex justify-content-between bg-light">
-                                    <small class="text-dark">Total </small>
+                                    <small class="text-dark">Total</small>
                                     <strong class="text-dark">@Model.OrderHeader.OrderTotal.ToString("c")</strong>
                                 </li>
                             </ul>
@@ -119,10 +118,10 @@
             <div class="card-footer">
                 <div class="row">
                     <p class="col-12 col-md-8 pt-2 text-warning">
-                         <span class="text-dark">Estimate Arrival Date:</span> &nbsp;@DateTime.Now.AddDays(ArrivalDate.Days).ToShortDateString()  &nbsp;<i class="bi bi-text-right text-dark"></i><i class="bi bi-truck text-dark" style="font-size: 1.5rem;"></i>
+                        <span class="text-dark">Estimate Arrival Date:</span> &nbsp;@DateTime.Now.AddDays(ArrivalDate.Days).ToShortDateString() &nbsp;<i class="bi bi-text-right text-dark"></i><i class="bi bi-truck text-dark" style="font-size: 1.5rem;"></i>
                     </p>
                     <div class="col-12 col-md-4">
-                        <button type="submit" value="Place Order" class="btn btn-primary form-control">Place Order</button>
+                        <button type="submit" value="Place Order" class="btn btn-success form-control">Place Order</button>
                     </div>
                 </div>
             </div>
