--- a/Books/Views/Shared/_Navbar.cshtml
+++ b/Books/Views/Shared/_Navbar.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Books.Domain.Utilities
 
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
     <div class="container">
-        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Books</a>
+        <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">Books</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -13,18 +13,18 @@
                 @if (User.Identity.IsAuthenticated && (User.IsInRole(Roles.RoleType.Admin.ToString()) || User.IsInRole(Roles.RoleType.SuperAdmin.ToString())))
                 {
                     <li class="nav-item dropdown px-2">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Manager</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" asp-area="Admin" asp-controller="Author" asp-action="Index">Authors</a>
-                            <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Products</a>
-                            <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a>
-                            <a class="dropdown-item" asp-area="Admin" asp-controller="Cover" asp-action="Index">Covers</a>
+                        <a class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Manager</a>
+                        <div class="dropdown-menu bg-dark">
+                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Author" asp-action="Index">Authors</a>
+                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Product" asp-action="Index">Products</a>
+                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a>
+                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Cover" asp-action="Index">Covers</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Companies</a>
+                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Company" asp-action="Index">Companies</a>
                         </div>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link" asp-controller="Order" asp-action="Index" asp-area="Admin">
+                        <a class="nav-link text-white" asp-controller="Order" asp-action="Index" asp-area="Admin">
                             Order Manager
                         </a>
                     </li>
@@ -32,13 +32,13 @@
                 else if ((!User.IsInRole(Roles.RoleType.Admin.ToString()) || !User.IsInRole(Roles.RoleType.SuperAdmin.ToString())) && User.Identity.IsAuthenticated)
                 {
                     <li class="nav-item px-2">
-                        <a class="nav-link" asp-controller="Order" asp-action="Index" asp-area="Admin">
+                        <a class="nav-link text-white" asp-controller="Order" asp-action="Index" asp-area="Admin">
                             Order Manager
                         </a>
                     </li>
                 }
                 <li class="nav-item px-2 position-relative">
-                    <a class="nav-link" asp-controller="Cart" asp-action="Index" asp-area="Customer">
+                    <a class="nav-link text-white" asp-controller="Cart" asp-action="Index" asp-area="Customer">
                         <i class="bi bi-cart text-success"></i>
                         @await Component.InvokeAsync("ShoppingCart")
                     </a>
