--- a/Books/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/Books/Areas/Customer/Views/Cart/Summary.cshtml
@@ -122,6 +122,9 @@
                     </p>
                     <div class="col-12 col-md-4">
                         <button type="submit" value="Place Order" class="btn btn-success form-control">Place Order</button>
+                        <button class="btn btn-success text-white col-12 col-md-4" type="submit" value="Add to Cart" id="Add_to_cart">
+                            <i class="bi bi-cart-plus"></i> Add to Cart
+                        </button>
                     </div>
                 </div>
             </div>
